# musica

./: README.md  pyproject.toml
scripts/: build_windows.bat
src/musica/: __init__.py  app.py  metadata.py
tests/: test_metadata.py
